Umstellung der Supabase-Initialisierung auf Umgebungsvariablen und Verbesserung der Wartungsanzeige-Logik im Update-Prozess.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class='intro-credits'>Made by Paluss1122</p>
     </div>
     <div id="maintenance-frame"
-        style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,1); color:white; z-index:999999; align-items:center; justify-content:center; flex-direction:column; font-size:2em;">
+        style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,1); color:white; z-index:999999; align-items:center; justify-content:center; flex-direction:column; font-size:2em; opacity: 0; transition: opacity 1s;">
         <div style="width: 100%; text-align: center;">
             <h1 style="width: 100%;; font-size:xx-large">⚠️ Wartungsarbeiten</h1>
             <p style="width: 100%;">Aktuell finden Wartungsarbeiten statt!</p>
