--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
             <img src='green-arrow.webp' alt='' class='green-arrow' style='z-index: 100000000000' />
         </button>
     </div>
+    <script>
+        // Netlify-Umgebungsvariablen verfügbar machen
+        window.SUPABASE_URL = '%SUPABASE_URL%';
+        window.SUPABASE_KEY = '%SUPABASE_KEY%';
+    </script>
     <script type='module' src="Files/Module/index.js"></script>
     <script src="Files/Default/index.js"></script>
 </body>
