Verbesserung der Handhabung von Supabase-Umgebungsvariablen: Anpassung der Kommentare und Hinzufügen von Fehlerprüfungen im Modul zur Sicherstellung der Verfügbarkeit der Variablen.

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </button>
     </div>
     <script>
-        // Netlify-Umgebungsvariablen verfügbar machen
+        // Netlify-Umgebungsvariablen für Supabase verfügbar machen
         window.SUPABASE_URL = '%SUPABASE_URL%';
         window.SUPABASE_KEY = '%SUPABASE_KEY%';
     </script>
