--- a/Admin/settings.html
+++ b/Admin/settings.html
@@ -341,6 +341,21 @@
             background-color: #dc3545;
         }
 
+        .access-denied {
+            text-align: center;
+            padding: 50px;
+            background: #f8d7da;
+            color: #721c24;
+            border-radius: 10px;
+            margin: 20px;
+            border: 1px solid #f5c6cb;
+        }
+
+        .access-denied h1 {
+            color: #721c24;
+            margin-bottom: 20px;
+        }
+
         @media (max-width: 768px) {
             .setting-details {
                 grid-template-columns: 1fr;
@@ -412,6 +427,29 @@
 
     <script type="module">
         import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+
+        // Zugangskontrolle
+        function checkAccess() {
+            const username = localStorage.getItem('username');
+            if (username !== 'Paluss1122') {
+                document.body.innerHTML = `
+                    <div class="access-denied">
+                        <h1>🚫 Zugang verweigert</h1>
+                        <p>Sie haben keine Berechtigung, diese Seite zu besuchen.</p>
+                        <p>Benötigter Benutzer: Paluss1122</p>
+                        <p>Aktueller Benutzer: ${username || 'Nicht angemeldet'}</p>
+                    </div>
+                `;
+                return false;
+            }
+            return true;
+        }
+
+        // Zugangskontrolle beim Laden der Seite
+        if (!checkAccess()) {
+            // Stoppe die weitere Ausführung
+            throw new Error('Zugang verweigert');
+        }
 
         // Supabase Konfiguration
         const supabaseUrl = "https://empsgwnjxxhzyudvxyxg.supabase.co";
