--- a/index.html
+++ b/index.html
@@ -61,42 +61,66 @@
 
         start()
     </script>
+
     <div id='black' style='opacity: 0; display: none;'></div>
+
     <iframe id='bg-iframe' src='LoadingScreen/Spinning circle/index.html' frameborder='0'
-        style='width: 100%; height: 100%; position: fixed; top: 0; z-index: -100000; transform: scale(5); opacity: 1; filter: saturate(0); transition: filter 2s;'></iframe>
+        style='width: 100%; height: 100%; position: fixed; top: 0; z-index: -100000; transform: scale(5); opacity: 1; filter: saturate(0); transition: filter 2s;'>
+    </iframe>
+
     <p id='start'>Beginnen wir!</p>
+
     <div id='info-container' style='opacity: 0; z-index: -10;'>
         <p id='info-title' style='font-size: 0.8em; text-decoration: underline;'>Hiiii</p>
+
         <p id='info-text' style='font-size: 0.5em'>Hiiii</p>
+
         <button
-            onclick='document.getElementById("info-container").style.opacity = "0"; setTimeout(() => {document.getElementById("info-container").style.zIndex = "-10";}, 500);'>Zurück</button>
+            onclick='document.getElementById("info-container").style.opacity = "0"; setTimeout(() => {document.getElementById("info-container").style.zIndex = "-10";}, 500);'>
+            Zurück
+        </button>
     </div>
     <div id='login-container' style='display: none; opacity: 0;'>
         <form id='login-form-1'>
             <label for='username' style='margin-top: 0;'>Gib deinen Nutzername ein:</label>
+
             <input type='text' id='username' required autocomplete='on' style='text-align: center' />
+
             <p id='Hinweis-1' style='display: none;'></p>
+
             <button style='margin: 0;' type='submit'>Weiter zur Passwort Eingabe</button>
+
             <button onclick='nousername()' type='button'>Ich kenne meinen Nutzername nicht / <br> Ich hab keinen
                 Nutzername erhalten</button>
         </form>
+
         <form id='login-form-2' style='display: none;'>
             <label for='password' style='margin-top: 0;'>Gib dein Passwort ein:</label>
+
             <input style='text-align: center' type='text' id='password' required />
+
             <p id='Hinweis-2' style='display: none;'></p>
+
             <button id='eye' type='button' onclick='togglePasswordVisibility()'
                 style='position: absolute; right: 10px; top: 50%; transform: translateY(-70%); background: none; border: none; cursor: pointer; padding: 0; margin: 0; display: none; font-size: 30px;'>
                 👁️
             </button>
+
             <button style='margin: 0;' type='submit'>Anmelden</button><br>
+
             <button onclick='nopassword()' type='button'>Ich kenne mein Passwort nicht / <br> Ich hab kein
                 Passwort erhalten</button>
+
             <br>
+
             <button type='button'
-                onclick='document.getElementById("login-container").style.transition = "opacity 0.5s"; document.getElementById("login-container").style.opacity = "0"; setTimeout(() => { document.getElementById("login-form-2").style.display = "none"; document.getElementById("login-form-1").style.display = "block"; document.getElementById("login-container").style.opacity = "1";}, 500);'>Zurück</button>
+                onclick='document.getElementById("login-container").style.transition = "opacity 0.5s"; document.getElementById("login-container").style.opacity = "0"; setTimeout(() => { document.getElementById("login-form-2").style.display = "none"; document.getElementById("login-form-1").style.display = "block"; document.getElementById("login-container").style.opacity = "1";}, 500);'>
+                Zurück
+            </button>
         </form>
         <form id='login-form-3' style='display: none;'>
-            <label for='password' style='margin-top: 0;'>Welchen Hintergrund möchtest du haben?
+            <label for='password' style='margin-top: 0;'>
+                Welchen Hintergrund möchtest du haben?
             </label>
 
             <div>
@@ -158,16 +182,21 @@
             </div>
 
             <button style='margin: 0;' type='submit'>Speichern</button>
+
             <br>
+
             <button type='button'
                 onclick='document.getElementById("login-container").style.transition = "opacity 0.5s"; document.getElementById("login-container").style.opacity = "0"; setTimeout(() => { document.getElementById("login-form-3").style.display = "none"; document.getElementById("login-form-2").style.display = "block"; document.getElementById("login-container").style.opacity = "1";}, 500);'>Zurück</button>
         </form>
         <form id='login-form-4' style='display: none;'>
             <label for='password' style='margin-top: 0;'>Wie möchtest du genannt werden?</label>
+
             <input style='text-align: center' type='text' id='displayname' required />
+
             <button style='margin: 0;' type='submit'>Speichern</button>
 
             <br>
+
             <button type='button'
                 onclick='document.getElementById("login-container").style.transition = "opacity 0.5s"; document.getElementById("login-container").style.opacity = "0"; setTimeout(() => { document.getElementById("login-form-4").style.display = "none"; document.getElementById("login-form-3").style.display = "block"; document.getElementById("login-container").style.opacity = "1";}, 500);'>Zurück</button>
         </form>
@@ -177,49 +206,67 @@
 
             <button type='submit' style='background-color: green;'>Ja ich erlaube die Verwendung von Cookies
                 (Speicherung)</button>
+
             <button type='button' onclick='localStorage.clear(); window.location.reload()'
                 style='background-color: red;'>Nein ich erlaube die Verwendung von Cookies (Speicherung) nicht
                 <u>(Website nicht nutzbar)</u></button>
+
             <br>
+
             <button type='button'
                 onclick='document.getElementById("login-container").style.transition = "opacity 0.5s"; document.getElementById("login-container").style.opacity = "0"; setTimeout(() => { document.getElementById("login-form-5").style.display = "none"; document.getElementById("login-form-4").style.display = "block"; document.getElementById("login-container").style.opacity = "1";}, 500);'>Zurück</button>
         </form>
     </div>
     <div id='dashboard' style='display: none; opacity: 0; position: relative;'>
         <h1 style='animation: colorchange 2s ease-in-out; color: white;'>
-            <span id='Begrüßung'></span> <span id='usname'></span><span id='f'></span>
+            <span id='Begrüßung'></span>
+            <span id='usname'></span><span id='f'></span>
         </h1>
+
         <div class='link-container' id='link-container'>
             <h3 id='maths'><u>Mathe Lösungen</u></h3>
+
             <a href=' ' id='device-infos'><span>Alle Lösungen</span></a>
+
             <h3 id='device-infos-text'><u>Geräte Informationen</u></h3>
+
             <a href='https://device-information-paluss1122.netlify.app' id='device-infos'><span>Geräte Infos</span></a>
+
             <h3 id='games-website-text'><u>Spiele</u></h3>
+
             <a href='https://games-paluss1122.netlify.app/' id='games-website'><span>Spiele</span></a>
         </div>
     </div>
 
-    <!-- Tutorial Overlay -->
     <div id='tutorial-overlay'
         style='display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 999997; transition: opacity 1s; opacity: 0;'>
 
     </div>
     <div id='tutorial-content'
         style='position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #2d2d2d; border-radius: 20px; padding: 30px; max-width: 500px; text-align: center; color: white; z-index: 999999; display: none;transition: opacity 1s; opacity: 0;'>
-        <h2 id='tutorial-title' style='margin-bottom: 20px; color: #ff6b6b; margin-top: 0;'>Willkommen beim Dashboard!
-            👋</h2>
-        <p id='tutorial-text' style='font-size: 18px; line-height: 1.5; margin-bottom: 25px;'>Lass mich dir zeigen, wie
-            du die wichtigsten Funktionen nutzen kannst.</p>
-        <div id='tutorial-step' style='margin-bottom: 25px;'>
+        <h2 id='tutorial-title' style='margin-bottom: 20px; color: #ff6b6b; margin-top: 0;'>
+            Willkommen beim Dashboard!
+        </h2>
 
-        </div>
+        <p id='tutorial-text' style='font-size: 18px; line-height: 1.5; margin-bottom: 25px;'>
+            Lass mich dir zeigen, wie du die wichtigsten Funktionen nutzen kannst.
+        </p>
+
         <div style='display: flex; justify-content: space-between; gap: 10px;'>
             <button id='tutorial-prev' onclick='stutorialPrev()'
-                style='padding: 10px 20px; background: #666; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>Zurück</button>
+                style='padding: 10px 20px; background: #666; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>
+                Zurück
+            </button>
+
             <button id='tutorial-next' onclick='stutorialNext()'
-                style='padding: 10px 20px; background: #ff6b6b; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>Weiter</button>
+                style='padding: 10px 20px; background: #ff6b6b; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>
+                Weiter
+            </button>
+
             <button id='tutorial-skip' onclick='stutorialSkip()'
-                style='padding: 10px 20px; background: #444; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>Überspringen</button>
+                style='padding: 10px 20px; background: #444; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>
+                Beenden
+            </button>
         </div>
     </div>
 
@@ -231,15 +278,15 @@
         style='transform: scale(1); display: none; bottom: 0; left: 0;'>
         <img src='settings.png' class='shopimg' alt='settings image' />
     </button>
+
     <div id='settingsframe' style='display: none; opacity: 0;' class='settingsframe'>
         <div class='offer' style='border-radius: 50px 50px 0px 0px'>
             <h4 style='margin: 0; font-size: 30px'><u>Hintergrund</u></h4>
             <div class='offer' style='margin: 0; padding-bottom: 0'>
                 <form id='bg-setting' style='display: block; position: relative;'>
-                    <label for='password' style='margin-top: 0;'>Welchen Hintergrund möchtest du haben? <span
-                            style='color: gray;'>(Kann später in den Einstellungen nochmal geändert werden)</span>
+                    <label for='password' style='margin-top: 0;'>Welchen Hintergrund möchtest du haben?
+                        <span style='color: gray;'>(Kann später in den Einstellungen nochmal geändert werden)</span>
                     </label>
-
                     <div>
                         <button type='button' id='spinningbg1' class='selected' style='background: gray; color: black;'
                             onclick='changebg("spinning")'>
@@ -266,15 +313,18 @@
                             onclick='changebg("black")'>
                             Schwarz - Grau
                         </button>
+
                         <button type='button' id='bluebg1' class='notselected'
                             style='background: linear-gradient(to right, blue, red)' onclick='changebg("blue")'>
                             Blau - Rot
                         </button>
+
                         <button type='button' id='greenbg1' class='notselected'
                             style='background: linear-gradient(to right, Green, Yellow); color: black;'
                             onclick='changebg("green")'>
                             Grün - Gelb
                         </button>
+
                         <button type='button' id='redbg1' class='notselected'
                             style='background: linear-gradient(to right, red, orange); color: black;'
                             onclick='changebg("red")'>
@@ -300,6 +350,7 @@
                         </button>
                     </div>
                 </form>
+
                 <form id='setdisplayname'>
                     <label for='set-displayname'>Wie möchtest du genannt werden?</label>
                     <input type='text' id='set-displayname'>
@@ -307,31 +358,26 @@
                     <button onmouseenter='this.style.transform = "scale(1)"' style='border: none;'
                         type='submit'>Speichern</button>
                 </form>
+
                 <br>
+
                 <button onclick='localStorage.clear(); window.location.reload()' style='margin-bottom: 20px'>
                     Fehlerbehebung mit Einstellungen + Abmeldung + Einstellungen werden
                     zurückgesetzt
                 </button>
+
                 <button onclick='resetTutorial(); settings();' style='margin-bottom: 50px; background-color: #ff6b6b;'>
                     Tutorial erneut starten
                 </button>
             </div>
         </div>
-        <button id='closebtshop' onclick='settings()' style='
-      bottom: 0;
-      position: fixed;
-      background: none;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      height: 10%;
-      right: 0;
-      width: 87px;
-      z-index: 100000000000;
-    '>
+
+        <button id='closebtshop' onclick='settings()'
+            style='bottom: 0; position: fixed; background: none; border: none; border-radius: 30px; cursor: pointer; height: 10%; right: 0; width: 87px; z-index: 100000000000;'>
             <img src='green-arrow.webp' alt='' class='green-arrow' style='z-index: 100000000000' />
         </button>
     </div>
+
     <script type='module' src="Files/Module/index.js"></script>
     <script src="Files/Default/index.js"></script>
 </body>
