Hinzufügen einer neuen HTML-Seite für Latein Vokabeln mit interaktiven Funktionen und Bildnavigation. Neue Bilder für die Navigation und Vokabeln hinzugefügt. Anpassungen in index.html zur Verlinkung der neuen Seite und zur Verbesserung der Benutzeroberfläche.

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 
             <a href=' ' id='device-infos'><span>Alle Lösungen</span></a>
 
+            <h3 id='voc'><u>Vokabeln</u></h3>
+
+            <a href='Latein/index.html' id='latein'><span>Latein Vokabeln</span></a>
+
             <h3 id='device-infos-text'><u>Geräte Informationen</u></h3>
 
             <a href='https://device-information-paluss1122.netlify.app' id='device-infos'><span>Geräte Infos</span></a>
