--- a/Latein/index.html
+++ b/Latein/index.html
@@ -290,6 +290,7 @@
             }
         });
     </script>
+    <meta name="google-site-verification" content="1aTQskq8WGI2dKHzTrsfXzXzpibQ-splCo6KtK7MkTs" />
 </head>
 
 <body>
