fehlermeldungen bei start geaddet!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <h1 id="problem">Unerwarteter Fehler aufgetreten! Es werden Problembehandlungen eingeleitet, sollte das nicht helfen werden leider Wartungsarbeiten aktiviert!</h1>
     <div id='intro'>
         <p class='intro-title' style='transform: scale(2.5); position: fixed; top: 0; transform-origin: 50% 0%;'>Hi
             <span style='color: red;' id='intro-username'></span>
