--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <p class='intro-title'>Solutions Dashboard 8</p>
         <p class='intro-credits'>Made by Paluss1122</p>
     </div>
+    <div id='countdown' style="display: flex; z-index: unset;">
+        <p class='countdown-title' style='transform: scale(1); position: fixed; top: 0; transform-origin: 50% 0%; opacity: 1;'>
+            Solutions Dashboard 8
+        </p>
+        <p class='countdown-title' id="cd" style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 10px orange; border-radius: 10px; padding: 10px;">0d 0h 0m 0s</p>
+        <p class='countdown-credits' style="opacity: 1; transform: scale(1);">Made by Paluss1122</p>
+    </div>
     <div id="maintenance-frame"
         style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,1); color:white; z-index:999999; align-items:center; justify-content:center; flex-direction:column; font-size:2em; opacity: 0; transition: opacity 1s;">
         <div style="width: 100%; text-align: center;">
