--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <p class='countdown-title' style='transform: scale(1); position: fixed; top: 0; transform-origin: 50% 0%; opacity: 1;'>
             Solutions Dashboard 8
         </p>
-        <p class='countdown-title' id="cd" style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 10px orange; border-radius: 10px; padding: 10px;">0d 0h 0m 0s</p>
-        <p class='countdown-credits' style="opacity: 1; transform: scale(1);">Made by Paluss1122</p>
+        <p class='countdown-title'style="opacity: 1; transform: scale(1); font-size: 3em; margin-bottom: 30px">Sorry, we still need time...</p>
+        <p class='countdown-title' id="cd" style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 15px orange; border-radius: 30px; padding: 10px;">0d 0h 0m 0s</p>
+        <p class='countdown-credits' style="opacity: 1; transform: scale(1); margin-top: 20px">Made by Paluss1122</p>
     </div>
     <div id="maintenance-frame"
         style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,1); color:white; z-index:999999; align-items:center; justify-content:center; flex-direction:column; font-size:2em; opacity: 0; transition: opacity 1s;">
