--- a/Maths/index.html
+++ b/Maths/index.html
@@ -250,7 +250,7 @@
         window.SendAnalyticsStep = async function (action) {
             let user = null;
             try {
-                user = window.founduser.username;
+                user = localStorage.getItem('username');
             } catch (e) {
                 console.error("Fehler beim Auslesen des Benutzernamens:", e);
                 user = null;
@@ -312,6 +312,14 @@
             </button>
         </div>
         <p id="pageNumber">Seite 1 von 1</p>
+        
+        <div class="manual-navigation">
+            <input class="normal" style="width: 20%;" type="number" id="pageInput" min="1" max="1"
+                placeholder="Seite eingeben">
+            <button class="normal"
+                style="display: block; left: 50%; position: relative; transform: translate(-50%); width: auto; margin-top: 5px; margin-bottom: 5px; cursor: pointer;"
+                onclick="goToPage()">Wechseln</button>
+        </div>
     </div>
 </body>
 
