--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class='link-container' id='link-container'>
             <h3 id='maths'><u>Mathe Lösungen</u></h3>
 
-            <a href=' ' id='device-infos'><span>Alle Lösungen</span></a>
+            <a href='Maths/index.html' id='device-infos'><span>Alle Lösungen</span></a>
 
             <h3 id='voc'><u>Vokabeln</u></h3>
 
