--- a/index.html
+++ b/index.html
@@ -16,21 +16,14 @@
 </head>
 
 <body>
-    <h1 id="problem">Unerwarteter Fehler aufgetreten! Es werden Problembehandlungen eingeleitet, sollte das nicht helfen werden leider Wartungsarbeiten aktiviert!</h1>
+    <h1 id="problem">Unerwarteter Fehler aufgetreten! Es werden Problembehandlungen eingeleitet, sollte das nicht helfen
+        werden leider Wartungsarbeiten aktiviert!</h1>
     <div id='intro'>
         <p class='intro-title' style='transform: scale(2.5); position: fixed; top: 0; transform-origin: 50% 0%;'>Hi
             <span style='color: red;' id='intro-username'></span>
         </p>
         <p class='intro-title'>Solutions Dashboard 8</p>
         <p class='intro-credits'>Made by Paluss1122</p>
-    </div>
-    <div id='countdown' style="display: flex; z-index: unset;">
-        <p class='countdown-title' style='transform: scale(1); position: fixed; top: 0; transform-origin: 50% 0%; opacity: 1;'>
-            Solutions Dashboard 8
-        </p>
-        <p class='countdown-title'style="opacity: 1; transform: scale(1); font-size: 3em; margin-bottom: 30px">Sorry, we still need time...</p>
-        <p class='countdown-title' id="cd" style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 15px orange; border-radius: 30px; padding: 10px;">0d 0h 0m 0s</p>
-        <p class='countdown-credits' style="opacity: 1; transform: scale(1); margin-top: 20px">Made by Paluss1122</p>
     </div>
     <div id="maintenance-frame"
         style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,1); color:white; z-index:999999; align-items:center; justify-content:center; flex-direction:column; font-size:2em; opacity: 0; transition: opacity 1s;">
@@ -74,9 +67,9 @@
 
     <div id='black' style='opacity: 0; display: none;'></div>
 
-    <iframe id='bg-iframe' src='LoadingScreen/Spinning circle/index.html' frameborder='0'
-        style='width: 100%; height: 100%; position: fixed; top: 0; z-index: -100000; transform: scale(5); opacity: 1; filter: saturate(0); transition: filter 2s;'>
-    </iframe>
+    <video id='bg-iframe' src="LoadingScreen/Spinning circle/video.mp4" autoplay muted loop
+        style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -100000; opacity: 1; filter: saturate(0); transition: filter 2s;">
+    </video>
 
     <p id='start'>Beginnen wir!</p>
 
@@ -227,6 +220,19 @@
                 onclick='document.getElementById("login-container").style.transition = "opacity 0.5s"; document.getElementById("login-container").style.opacity = "0"; setTimeout(() => { document.getElementById("login-form-5").style.display = "none"; document.getElementById("login-form-4").style.display = "block"; document.getElementById("login-container").style.opacity = "1";}, 500);'>Zurück</button>
         </form>
     </div>
+    <div id='countdown' style="display: none; z-index: unset;">
+        <p class='countdown-title'
+            style='transform: scale(1); position: fixed; top: 0; transform-origin: 50% 0%; opacity: 1;'>Solutions
+            Dashboard 8</p>
+        <p class='countdown-title' style="opacity: 1; transform: scale(1); font-size: 3em; margin-bottom: 30px">
+            Sorry,
+            we still need time...</p>
+        <p class='countdown-title' id="cd"
+            style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 15px orange; border-radius: 30px; padding: 10px;">
+            0d 0h 0m 0s</p>
+        <p class='countdown-credits' style="opacity: 1; transform: scale(1); margin-top: 20px">Made by Paluss1122
+        </p>
+    </div>
     <div id='dashboard' style='display: none; opacity: 0; position: relative;'>
         <h1 style='animation: colorchange 2s ease-in-out; color: white;'>
             <span id='Begrüßung'></span>
@@ -299,7 +305,6 @@
             <div class='offer' style='margin: 0; padding-bottom: 0'>
                 <form id='bg-setting' style='display: block; position: relative;'>
                     <label for='password' style='margin-top: 0;'>Welchen Hintergrund möchtest du haben?
-                        <span style='color: gray;'>(Kann später in den Einstellungen nochmal geändert werden)</span>
                     </label>
                     <div>
                         <button type='button' id='spinningbg1' class='selected' style='background: gray; color: black;'
