Update countdown message for clarity

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             Dashboard 8</p>
         <p class='countdown-title' style="opacity: 1; transform: scale(1); font-size: 3em; margin-bottom: 30px">
             Sorry,
-            we still need time...</p>
+            we are currently waiting for our delivery...</p>
         <p class='countdown-title' id="cd"
             style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 15px orange; border-radius: 30px; padding: 10px;">
             0d 0h 0m 0s</p>
