Add new module for Supabase integration and user management

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         </button>
     </div>
 
-    <script type='module' src="Files/Module/index.js"></script>
+    <script type='module' src="Files/Module/index-module.js"></script>
     <script src="Files/Default/index.js"></script>
 </body>
 
