--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 document.getElementById("login-container").style.opacity = "1";}, 500);'>Zurück</button>
         </form>
     </div>
-    <div id='countdown' style="display: none; z-index: unset;">
+    <div id='countdown' style="display: none; z-index: 100000000;">
         <p class='countdown-title'
             style='transform: scale(1); position: fixed; top: 0; transform-origin: 50% 0%; opacity: 1;'>Solutions
             Dashboard 8</p>
@@ -301,6 +301,10 @@
             <h3 id='voc'><u>Vokabeln</u></h3>
 
             <a href='Latein/index.html' id='latein'><span>Latein Vokabeln</span></a>
+
+            <h3 id='device-infos-text'><u>Hausaufgaben Organisieren</u></h3>
+
+            <a href='Editor/index.html' id='latein'><span>Hausaufgaben Editor</span></a>
 
             <h3 id='device-infos-text'><u>Geräte Informationen</u></h3>
 
