--- a/Admin/analytics.html
+++ b/Admin/analytics.html
@@ -48,7 +48,7 @@
 
     // Supabase Config
     const supabaseUrl = "https://empsgwnjxxhzyudvxyxg.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVtcHNnd25qeHhoenl1ZHZ4eXhnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM3MTI2NzUsImV4cCI6MjA2OTI4ODY3NX0.WvGmXzoIojeiM8l1GN_e9iRq5C5G2AURiyy96NLjnhE";
     const supabase = createClient(supabaseUrl, supabaseKey);
 
     async function ladeAnalytics() {
